--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="icon" href="<%= BASE_URL %>nugslogo.png">
+  <link rel="icon" href="<%= BASE_URL %>nugst-new-logo.png">
   <title>Nugs-Ternopil</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+  <meta name="msapplication-TileColor" content="#fcd116" />
+  <meta name="theme-color" content="#fcd116">
 </head>
 
 <body>
