--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
   <title>Nugs-Ternopil</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
-
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#fcd116" />
 </head>
 
 <body>
