--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,13 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#fcd116" />
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-1638506102244874",
+      enable_page_level_ads: true
+    });
+  </script>
 </head>
 
 <body>
